fix horizontal scroll

--- a/resources/css/main-style.css
+++ b/resources/css/main-style.css
@@ -84,6 +84,7 @@ body{
 /*main wrapper style*/
 .main-wrapper{
     padding-left: 100px;
+    overflow: hidden;
 }
 /*.main-section{*/
 /*    transition: var(--transition-link);*/
@@ -615,12 +616,12 @@ header{
             border-top: 1px solid #E6E6E6;
         }
         .navbar-toggler{
-             display: flex;
+            display: flex;
             position: absolute;
             right: 10px;
             top: 26px;
             max-height: 38px;
-            background: transparent
+            background: transparent;
             .box-hamburg i:before{
                 color: white;
                 font-size: 38px;
@@ -975,9 +976,14 @@ header{
             height: 100%;
             position: absolute;
             width: 100%;
-
+            img{
+                object-fit: cover;
+                object-position: left;
+                height: 100%;
+            }
             .slide-link img{
                 object-fit: cover;
+                object-position: left;
                 width: 100%;
                 max-height: 955px;
                 height: 100%;
@@ -1261,6 +1267,39 @@ header{
         }
     }
 }
+@media screen and (max-width: 640px){
+    .slide_buttons{
+        display: none !important;
+    }
+    .box-slider {
+        .previous_btn, .next_btn {
+            align-items: end;
+            opacity: 1;
+        }
+        .previous_btn{
+            bottom: 40px;
+        }
+        .next_btn {
+            left: 65px;
+            bottom: 20px;
+            top: auto;
+            margin: 0;
+        }
+        & .previous_btn, & .next_btn {
+            i{
+                border: 1px solid white;
+            }
+            i:before {
+                padding: 10px;
+                font-size: 25px;
+                background-color: #820000;
+            }
+            i:hover:before{
+                background-color: #C10F1A;
+            }
+        }
+    }
+}
 @media screen and (max-width: 540px){
     .slider-section{
 
@@ -1272,7 +1311,7 @@ header{
 @media screen and (max-width: 430px) {
     .slider-section{
         & .sldr{
-            max-height: 143px;
+            max-height: 255px;
         }
         .directional_nav {
             .previous_btn, .next_btn {
@@ -1287,9 +1326,12 @@ header{
                 flex-direction: column;
                 .under-info{
                     height: 78px;
+                    overflow: hidden;
+                    display: flex;
                     padding: 15px;
                     .text-under-info{
                         font-size: 14px !important;
+                        white-space: collapse;
                     }
                     .icon-box svg{
                         width: 20px;
